Release 3.1